--- a/GameOfThrones/Client/MainWindow.xaml
+++ b/GameOfThrones/Client/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Client"
         mc:Ignorable="d"
-        Title="Game Of Thrones" Height="689.765" Width="1176" KeyDown="Window_KeyDown" Closing="Window_Closing">
+        Title="Game Of Thrones" KeyDown="Window_KeyDown" Closing="Window_Closing" Height="882.501" Width="1610.899">
+
+
 
     <Window.Resources>
         <Style x:Key="StyleControl" TargetType="Control">
@@ -15,7 +17,7 @@
 
     <Grid x:Name="gvMain">
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -24,9 +26,28 @@
         </Grid.ColumnDefinitions>
 
         <GridSplitter Grid.RowSpan="2" Width="5" VerticalAlignment="Stretch" />
-        <GridSplitter Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="5" HorizontalAlignment="Stretch"  />
+        <GridSplitter Grid.Row="1" VerticalAlignment="Top" Grid.ColumnSpan="1" Height="5" HorizontalAlignment="Stretch"  />
 
-        <Grid x:Name="gvChat" Grid.Row="1" Grid.Column="1">
+        <Grid Grid.RowSpan="2" Grid.Column="1">
+            <Grid.Background>
+                <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+                    <GradientStop Color="Black" Offset="0.083"/>
+                    <GradientStop Color="White" Offset="0.3"/>
+                    <GradientStop Color="#FF020202" Offset="0.917"/>
+                    <GradientStop Color="#FFF2F3F9" Offset="0.693"/>
+                </LinearGradientBrush>
+            </Grid.Background>
+            <Viewbox >
+                <Canvas x:Name="ucBoard" Height="792" Width="1190" >
+                    <Canvas.Background>
+                        <ImageBrush ImageSource="Images/GOT_Board.jpg"/>
+                    </Canvas.Background>
+                    <Ellipse x:Name="ucPiece" Height="42" Canvas.Left="811" Stroke="Black" Canvas.Top="611" Width="43" Fill="#FF1A1A5D" MouseDown="Ellipse_MouseDown" MouseMove="Ellipse_MouseMove" MouseUp="Ellipse_MouseUp"/>
+                </Canvas>
+            </Viewbox>
+        </Grid>
+        <!--Chat Box-->
+        <Grid x:Name="gvChat" Margin="0,5,5,0" Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="3*"/>
                 <ColumnDefinition Width="1*"/>
@@ -36,14 +57,15 @@
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
 
-            <TextBox Style="{StaticResource StyleControl}" Margin="0,5,0,0" Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding ReceivedText}" TextWrapping="Wrap" AcceptsReturn="True" IsEnabled="False"/>
+            <TextBox Style="{StaticResource StyleControl}" Grid.Row="0" Grid.ColumnSpan="2" Text="{Binding ReceivedText}" TextWrapping="Wrap" AcceptsReturn="True" IsEnabled="False"/>
             <DockPanel Grid.Row="1" Grid.ColumnSpan="2" LastChildFill="True">
                 <Button x:Name="btnSubmit" Content="Send" DockPanel.Dock="Right" MinWidth="100" Command="{Binding SendMessageCommand}"/>
                 <TextBox x:Name="txtEnteredText"  Style="{StaticResource StyleControl}" DockPanel.Dock="Left" Text="{Binding EnteredText}" HorizontalAlignment="Stretch"/>
             </DockPanel>
         </Grid>
 
-        <ItemsControl x:Name="ucPlayers" Grid.Row="1" Grid.Column="0" Grid.RowSpan="2" 
+        <!--Players Status-->
+        <ItemsControl x:Name="ucPlayers" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" 
               ItemsSource="{Binding PlayerInfos}"
               Margin="0,0,0,0" >
             <ItemsControl.ItemsPanel>
@@ -64,22 +86,6 @@
             </ItemsControl.ItemTemplate>
         </ItemsControl>
 
-        <!--<StackPanel x:Name="ucPlayers" Grid.Row="1" Grid.Column="0" Margin="10" ="{Binding PlayerInfos}" />
-        -->
-        <!--<ListView.ItemTemplate>
-                <DataTemplate>
-                    <WrapPanel>
-                        <TextBlock Text="Name: " />
-                        <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                        -->
-        <!--<TextBlock Text=", " />
-                        <TextBlock Text="Age: " />
-                        <TextBlock Text="{Binding Age}" FontWeight="Bold" />-->
-        <!--
-                    </WrapPanel>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </DataGrid>-->
 
     </Grid>
 
